test/files/neg/implicit-any2stringadd.scala
// scalac: -Xsource:3 -Vimplicits
//
object Test {
  true + "what"
}
